--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
       <div class="right">
         <button class="menubar-btn" id="minimize-btn"><i class="fas fa-window-minimize"></i></button>
         <button class="menubar-btn" id="max-unmax-btn"><i class="far fa-square"></i></button>
-        <button class="menubar-btn" id="close-btn"><i class="fas fa-times"></i></button>
+        <!-- <button class="menubar-btn" id="close-btn"><i class="fas fa-times"></i></button> -->
       </div>
     </div>
     <div class="container">
-      Hello there!
+      Hello there!  
+      <a href="http://www.holmiumtechnologies.com/">Holmium</a>
     </div>
 
     <!-- You can also require other files to run in this process -->
